crates/biome_module_graph/tests/snapshots/test_export_const_type_declaration_with_namespace.snap
---
source: crates/biome_module_graph/tests/snap/mod.rs
expression: content
---

# `/src/index.d.ts`

## Source

```ts
declare namespace shared {
	type Result = string;
}

declare const shared: {
	foo(): shared.Result;
};

export = shared;
```

## Module Info

```
Exports {
  "default" => {
    ExportOwnExport => JsOwnExport::Type(TypeId(4))
  }
}
Imports {
  No imports
}
```
