crates/biome_module_graph/tests/snapshots/test_export_default_function_declaration.snap
---
source: crates/biome_module_graph/tests/snap/mod.rs
expression: content
---

# `/src/index.ts`

## Source

```ts
/**
 * @public
 * @returns {JSX.Element}
 */
export default function Component(): JSX.Element {}
```

## Module Info

```
Exports {
  "default" => {
    ExportOwnExport => JsOwnExport::Binding(130..139)
  }
}
Imports {
  No imports
}
```
