crates/biome_module_graph/tests/snapshots/test_export_referenced_function.snap
---
source: crates/biome_module_graph/tests/snap/mod.rs
expression: content
---

# `/src/index.ts`

## Source

```ts
/**
 * @returns {string}
 */
function foo() {}

export { foo };
```

## Module Info

```
Exports {
  "foo" => {
    ExportOwnExport => JsOwnExport::Binding(87..90)
  }
}
Imports {
  No imports
}
```
