crates/biome_module_graph/tests/snapshots/test_infer_call_expression_type_deduplicates_substituted_union_return_type.snap
---
source: crates/biome_module_graph/tests/spec_tests.rs
expression: content
---

# `/src/index.ts`

## Source

```ts
export function maybeString<T>(value: T): T | string {
	return value;
}
```

## Inferred types

```
Binding maybeString "maybeString" => sync Function "maybeString" {
  accepts: {
    params: [
      required value: instanceof T
    ]
    type_args: [T]
  }
  returns: instanceof T | string
}

Binding T "T" => T

Binding value "value" => instanceof T

Expression "value" => instanceof T
```
