crates/biome_module_graph/tests/snapshots/test_infer_call_expression_type_resolves_union_function_return_type.snap
---
source: crates/biome_module_graph/tests/spec_tests.rs
expression: content
---

# `/src/index.ts`

## Source

```ts
export function readString(): string {
	return "value";
}

export function readNumber(): number {
	return 1;
}
```

## Inferred types

```
Binding readString "readString" => sync Function "readString" {
  accepts: {
    params: []
    type_args: []
  }
  returns: string
}

Expression "\"value\"" => string: value

Binding readNumber "readNumber" => sync Function "readNumber" {
  accepts: {
    params: []
    type_args: []
  }
  returns: number
}

Expression "1" => number: 1
```
